[package]
name = "lionfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = {version = "0.7.0", features = ["gettext-system"]}
rfd = { version = "0.12.0", default-features = false, features = ["xdg-portal"] }
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.8.2"

[dependencies.iced]
version="0.10.0"
features=["image", "tokio"]

[dependencies.iced_aw]
version= "0.7.0"

[dependencies.iced_style]
version="0.9.0"
